[gd_scene load_steps=5 format=2]

[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Graphics/slimearmymenu.png" type="Texture" id=2]
[ext_resource path="res://Fonts/SunnyspellsRegular-MV9ze.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1422.0
margin_bottom = 800.0
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 1422.0
margin_bottom = 800.0
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 50.0
margin_top = 500.0
margin_right = 360.0
margin_bottom = 800.0
size_flags_horizontal = 2
size_flags_vertical = 8
alignment = 1

[node name="NewGame" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 26.0
margin_right = 360.0
margin_bottom = 106.0
rect_min_size = Vector2( 360, 80 )
size_flags_horizontal = 4
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.65098, 0.2, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "New Game"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 110.0
margin_right = 360.0
margin_bottom = 190.0
rect_min_size = Vector2( 360, 80 )
size_flags_horizontal = 4
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.65098, 0.2, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Options"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 194.0
margin_right = 360.0
margin_bottom = 274.0
rect_min_size = Vector2( 360, 80 )
size_flags_horizontal = 4
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.65098, 0.2, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Quit"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
